# PyPaCER

./: .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml
examples/: README.md  generate_electrode_slice_views.py  generate_pypacer_report.py  run_orientation_detection.py  transform_contacts_ants.py
src/pypacer/: __init__.py  __main__.py  _version.py
src/pypacer/cli/: __init__.py  main.py  pypacer.py  pypacer_gpu.py  pypacer_gui.py  pypacer_report.py
src/pypacer/core/: __init__.py  cog_trajectory_tracking.py  contact_detection.py  contact_detection_comparison.py  electrode_detection.py  polynomial_fitting.py  pypacer.py  pypacer_gpu.py  refinement.py  trajectory_fit.py
src/pypacer/gpu/: __init__.py  benchmark_interpolation.py  ct_volume_interpolator.py  gpu_utils.py  math_gpu.py  refinement_gpu.py  subvolume_interpolator.py  trajectory_pointcloud_gpu.py
src/pypacer/gui/: README.md  __init__.py  pypacer_gui.py
src/pypacer/imaging/: __init__.py  preprocessing.py
src/pypacer/models/: electrode.py  electrode_types.json
src/pypacer/orientation/: README.md  __init__.py  circular_sampling.py  marker_detection.py  marker_profile.py  orientation_analysis.py  visualization.py  visualization_debug.py  visualization_profile.py
src/pypacer/utils/: coordinate_transforms.py  math_helpers.py
src/pypacer/visualization/: __init__.py  electrode_sliceview.py  isosurface_extraction.py  report_generator.py
src/pypacer/visualization/report/: __init__.py  html_templates.py  intensity_profiles.py  orientation_tab.py  oriented_slice.py  report_generator.py  subvolume_extraction.py  visualization_3d.py  volume_rendering.py
